@@ -325,6 +325,7 @@ are shown in table \ref{table:functions}.
         \verb|mod|   & $x_1,x_2$          & the modulo of the integer division $x_1/x_2$ \\
         \verb|krodelta|& $x_1,x_2$            & the kronecker delta of $x_1$ and $x_2$\\
         \verb|defined|& $x$               & returns true if variable x is defined \\
+        \verb|spline|& $x_1,y_1,...,x_n,y_n,x$               & returns cubic spline interpolated value at $x$\\
       \bottomrule
     \end{tabular}
     \label{table:functions}
